--- a/e4.md
+++ b/e4.md
@@ -13,3 +13,7 @@ This pattern ensures only one thread can access the protected data or code. It i
 -	Java also provides wait() and notify() to suspend a thread and wake threads up that are waiting on the object respectively.
 -	These methods can be invoked within a synchronized statement/method.
 
+
+
+[<img src="https://cloud.githubusercontent.com/assets/14101008/11768481/3b7d20d6-a18b-11e5-95fe-a422966f4c03.png" width="50" height="50"></img>](https://github.com/hariniiyer/CSCI-5828_Presentation4_Software-Design-Patterns/edit/master/e3.md)
+[<img src="https://cloud.githubusercontent.com/assets/14101008/11768482/3d2d0bbc-a18b-11e5-8766-2e7f5b241782.png" width="50" height="50"></img>](https://github.com/hariniiyer/CSCI-5828_Presentation4_Software-Design-Patterns/edit/master/e5.md)
