--- a/b3.md
+++ b/b3.md
@@ -10,3 +10,8 @@
 in its basic implementation since the subject holds strong references to the observers. 
 
 - This can be prevented by replacing the strong references by weak references to the observers.
+
+
+
+[<img src="https://cloud.githubusercontent.com/assets/14101008/11768481/3b7d20d6-a18b-11e5-95fe-a422966f4c03.png" width="50" height="50"></img>](https://github.com/hariniiyer/CSCI-5828_Presentation4_Software-Design-Patterns/edit/master/b2.md)
+[<img src="https://cloud.githubusercontent.com/assets/14101008/11768482/3d2d0bbc-a18b-11e5-8766-2e7f5b241782.png" width="50" height="50"></img>](https://github.com/hariniiyer/CSCI-5828_Presentation4_Software-Design-Patterns/edit/master/b4.md)
